--- a/WebApplicationCrud/Views/Home/shop.cshtml
+++ b/WebApplicationCrud/Views/Home/shop.cshtml
@@ -37,15 +37,17 @@
         <div class="container">
             <div class="row">
                 @*aqedan------------------------------------------*@
-                <form asp-action="shop" asp-controller="Home" class="col-lg-3" enctype="multipart/form-data" method="post">
-                    @*<div class="col-lg-3">*@
-                    <div class="shop__sidebar">
-                        <div class="shop__sidebar__search">
-
-                            <input asp-for="SearchString" asp-action="shop" asp-controller="Home" type="text" />
+               
+                    <div class="col-lg-3">
+                <div class="shop__sidebar">
+                    <div class="shop__sidebar__search">
+                        <form  asp-action="shop" asp-controller="Home">
+                            <input asp-for="SearchString" type="text" />
                             <button type="submit"><span class="icon_search"></span></button>
+                        </form>
 
-                        </div>
+                    </div>
+                    <form asp-action="shop" asp-controller="Home" enctype="multipart/form-data" method="post">
                         <div class="shop__sidebar__accordion">
                             <div class="accordion" id="accordionExample">
                                 <div class="card">
@@ -136,71 +138,74 @@
                                     </div>
                                 </div>
                                 @*<div class="card">
-                                        <div class="card-heading">
-                                            <a data-toggle="collapse" data-target="#collapseFive">Colors</a>
-                                        </div>
-                                        <div id="collapseFive" class="collapse show" data-parent="#accordionExample">
-                                            <div class="card-body">
-                                                <div class="shop__sidebar__color">
-                                                    <label class="c-1" for="sp-1">
-                                                        <input type="radio" id="sp-1">
-                                                    </label>
-                                                    <label class="c-2" for="sp-2">
-                                                        <input type="radio" id="sp-2">
-                                                    </label>
-                                                    <label class="c-3" for="sp-3">
-                                                        <input type="radio" id="sp-3">
-                                                    </label>
-                                                    <label class="c-4" for="sp-4">
-                                                        <input type="radio" id="sp-4">
-                                                    </label>
-                                                    <label class="c-5" for="sp-5">
-                                                        <input type="radio" id="sp-5">
-                                                    </label>
-                                                    <label class="c-6" for="sp-6">
-                                                        <input type="radio" id="sp-6">
-                                                    </label>
-                                                    <label class="c-7" for="sp-7">
-                                                        <input type="radio" id="sp-7">
-                                                    </label>
-                                                    <label class="c-8" for="sp-8">
-                                                        <input type="radio" id="sp-8">
-                                                    </label>
-                                                    <label class="c-9" for="sp-9">
-                                                        <input type="radio" id="sp-9">
-                                                    </label>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>*@
+                        <div class="card-heading">
+                            <a data-toggle="collapse" data-target="#collapseFive">Colors</a>
+                        </div>
+                        <div id="collapseFive" class="collapse show" data-parent="#accordionExample">
+                            <div class="card-body">
+                                <div class="shop__sidebar__color">
+                                    <label class="c-1" for="sp-1">
+                                        <input type="radio" id="sp-1">
+                                    </label>
+                                    <label class="c-2" for="sp-2">
+                                        <input type="radio" id="sp-2">
+                                    </label>
+                                    <label class="c-3" for="sp-3">
+                                        <input type="radio" id="sp-3">
+                                    </label>
+                                    <label class="c-4" for="sp-4">
+                                        <input type="radio" id="sp-4">
+                                    </label>
+                                    <label class="c-5" for="sp-5">
+                                        <input type="radio" id="sp-5">
+                                    </label>
+                                    <label class="c-6" for="sp-6">
+                                        <input type="radio" id="sp-6">
+                                    </label>
+                                    <label class="c-7" for="sp-7">
+                                        <input type="radio" id="sp-7">
+                                    </label>
+                                    <label class="c-8" for="sp-8">
+                                        <input type="radio" id="sp-8">
+                                    </label>
+                                    <label class="c-9" for="sp-9">
+                                        <input type="radio" id="sp-9">
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>*@
                                 <div class="card">
-                                        <div class="card-heading">
-                                            <a data-toggle="collapse" data-target="#collapseSix">Tags</a>
-                                        </div>
-                                        <div id="collapseSix" class="collapse show" data-parent="#accordionExample">
-                                            <div class="card-body">
-                                   
-                                                <div class="shop__sidebar__tags">
-                                                   @foreach(var Tag in Model.Tags)
-                                                   {  
-                                                       <label>@Tag
-                                                          <input asp-for="TagFilter" type="radio" value="@Tag" />
-                                                      </label>
-                                                   }
-                                                </div>
+                                    <div class="card-heading">
+                                        <a data-toggle="collapse" data-target="#collapseSix">Tags</a>
+                                    </div>
+                                    <div id="collapseSix" class="collapse show" data-parent="#accordionExample">
+                                        <div class="card-body">
+
+                                            <div class="shop__sidebar__tags">
+                                                @foreach (var Tag in Model.Tags)
+                                                {
+                                                    <label>
+                                                        @Tag
+                                                        <input asp-for="TagFilter" type="radio" value="@Tag" />
+                                                    </label>
+                                                }
                                             </div>
                                         </div>
                                     </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    @*</div>*@
-                    <div>
-                        <input type="submit" name="Submit" value="Submit" />
-                    </div>
 
-                    @*aqamde--------------------------*@
-                </form>
+                        @*</div>*@
+                        <div>
+                            <input type="submit" name="Submit" value="Submit" />
+                        </div>
+
+                        @*aqamde--------------------------*@
+                    </form>
+                </div>
+                </div>
                 <div class="col-lg-9">
                     <div class="shop__product__option">
                         <div class="row">
