--- a/WebApplicationCrud/Views/_ViewImports.cshtml
+++ b/WebApplicationCrud/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using WebApplicationCrud
 @using WebApplicationCrud.Models
+@using WebApplicationCrud.ViewModels
+@using WebApplicationCrud.ViewModels.PanelVMs
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
