--- a/WebApplicationCrud/Views/Shared/_AdministrationSidebar.cshtml
+++ b/WebApplicationCrud/Views/Shared/_AdministrationSidebar.cshtml
@@ -2,7 +2,7 @@
 
 <nav id="sidebar">
     <div class="custom-menu">
-        <button type="button" id="sidebarCollapse" class="btn btn-primary">
+        <button type="button" id="sidebarCollape" class="btn btn-primary">
             <i class="fa fa-bars"></i>
             <span class="sr-only">Toggle Menu</span>
         </button>
