--- a/WebApplicationCrud/wwwroot/css/style.css
+++ b/WebApplicationCrud/wwwroot/css/style.css
@@ -3169,6 +3169,7 @@ ol {
 
 
 .Comment {
+	padding:5px;
 	width:100%;
 	word-wrap: break-word;
 	background-color: #fff;
@@ -3180,7 +3181,28 @@ ol {
 	box-shadow: 0px 0px 5px 0px rgb(161, 163, 164)
 }
 
+.inactiveSection {
+	transition: all 300ms ease;
+	display: none;
+}
+.subComment {
 
+	
+	transition: all 300ms ease;
+}
+.replyButton {
+	background-color: none;
+	border: none;
+	display: inline-block;
+	position: absolute;
+	right: 0;
+	border-color: white;
+	background: white;
+	margin-right: 8px;
+}
+.replyButton span{
+	background:transparent;
+}
 .blog__details__comment h4 {
 	color: #333333;
 	font-weight: 700;
